It's semantically incorrect to call notifyNodeListsAttributeChanged in dispatchSubtreeModifiedEvent https://bugs.webkit.org/show_bug.cgi?id=74028

Reviewed by Darin Adler.

Remove a call to notifyNodeListsAttributeChanged in dispatchSubtreeModified and add explicit calls
to notifyNodeListsAttributeChanged at appropriate places.

Also merge notifyNodeListsChildrenChanged with notifyLocalNodeListsChildrenChanged, and
notifyNodeListsAttributeChanged with notifyLocalNodeListsAttributeChanged, and rename them to
invalidateNodeListsCacheAfterAttributeChanges and invalidateNodeListsCacheAfterNodeChanges respectively.

* dom/Attr.cpp:
(WebCore::Attr::childrenChanged):
* dom/ContainerNode.cpp:
(WebCore::ContainerNode::childrenChanged):
* dom/Document.cpp:
(WebCore::Document::updateRangesAfterNodeChanges):
* dom/Document.h:
* dom/NamedNodeMap.cpp:
(WebCore::NamedNodeMap::addAttribute):
(WebCore::NamedNodeMap::removeAttribute):
* dom/Node.cpp:
(WebCore::removeNodeListCacheIfPossible):
(WebCore::Node::unregisterDynamicNodeList):
(WebCore::Node::invalidateNodeListsCacheAfterAttributeChanges):
(WebCore::Node::invalidateNodeListsCacheAfterNodeChanges):
(WebCore::Node::dispatchSubtreeModifiedEvent):
* dom/Node.h:
* dom/NodeRareData.h:
* dom/StyledElement.cpp:
(WebCore::StyledElement::classAttributeChanged):


Canonical link: https://commits.webkit.org/90836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102431 268f45cc-cd09-0410-ab3c-d52691b4dbfc